--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,9 +21,10 @@
   body {
     font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ",
       Meiryo, "ＭＳ Ｐゴシック", sans-serif;
+      background-color: #FFFCF3;
   }
   header {
-    background-color: #00acee;
+    background-color:#FFFCF3;
     height: 80px;
     font-weight: bold;
     display: flex;
@@ -31,17 +32,20 @@
     align-items: center;
   }
   header a {
-    color: white; 
+    color:black; 
     text-decoration: none; 
   }
   header h1 {
-    color: white;
+    color:black;
     margin-left: 20px;
+    font-family: 'Kaushan Script', cursive;
   }
   .header-list {
     display: flex;
     align-items: center;
+    font-family: 'Kaushan Script', cursive;
   }
+  
   header ul {
     display: flex;
   }
@@ -61,3 +65,5 @@
     position: fixed;
     justify-content: flex-end;
   }
+
+  
