--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -1,24 +1,49 @@
 .posts-container {
-    width: 50%;
-    margin: 10px auto;
+    width: 80%;
+    margin: 10% auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+    
+
   }
   h3 {
     width: 100px;
     margin: 30px auto;
     text-align: center;
-  }
-  .post {
-    border-top: solid #00acee;
-    margin-top: 10px;
-    padding-top: 20px;
-  }
-  .main-box {
-    margin: 5px 0;
-    display: flex;
-    justify-content: space-between;
-  }
-  .time {
-    display: flex;
-    justify-content: flex-end;
+    font-family: 'Kaushan Script', cursive;
   }
   
+ 
+  
+
+  .icon{
+    width: 100%;
+    height: px;
+  }
+
+  .post-image{
+    text-align: center;
+  }
+
+  .left-container{
+    width: 50%;
+    margin : 0 auto;
+    justify-content: flex-end;
+    
+    
+
+  }
+  
+.posts-container::after{
+  display:block;
+  width:50%;
+  content: "";
+}
+
+.post-about{
+  text-align: right;
+  padding-right: 25%;
+}
+
