--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,71 +1,57 @@
 <%= stylesheet_link_tag 'index', :media => "all" %>
 
-<h1>自分の題名</h1>
-<h3>一覧ページ</h3>
-<%= link_to "新規投稿へ", new_post_path %>
+
+<%= image_tag 'coffee.png', class:'icon' %>
+
+
+<h3>Posts</h3>
+
 <div class="posts-container">
-
-<% if user_signed_in? %>
-  <%= link_to "マイページへ", user_path(current_user.id) %>
-<% end %>
-
-  <% @posts.each do |t| %>
-    <div class="post">
-      <div class="main-box">
+  <% @posts.each do |t| %>     
         <div class="left-container">
-        
-            <%= image_tag t.image_url, size: "250x200" if t.image? %>
-            <%= t.name %>
-            <%= t.about %>
-            <%= t.cafe_name %>
-            <%= t.address%>
-            <%= link_to t.user.name, user_path(t.user.id) %>
-            <%= t.user.email %> 
-            <%= image_tag t.user.image_url, size: "250x200" if t.user.image? %>
-            <%= t.lat %>
-            <%= t.lng %>  
-        </div>
-
-        <div class="right-container">
-            <% if user_signed_in? && current_user.id == t.user_id %>
-                <%= link_to "編集する", edit_post_path(t.id) %>
-                <%= link_to "削除する", post_path(t.id), method: :delete %>
-            <% end %> 
+          <div class="post-image">
+          <%= link_to  post_path(t.id) do %> <%= image_tag t.image_url, size: "300x300" if t.image? %>  <% end %>  
+          </div>                   
+            
+          <div class="post-about">
+            <%= t.cafe_name %>                        
             <% if user_signed_in? %>
                 <% if current_user.already_liked?(t) %>
                     <%= link_to post_like_path(id: t.id, post_id: t.id), method: :delete do %>
                         <i class="fas fa-heart"></i><%= t.likes.count %> 
-                        <p>いいねを取り消す</p><%= t.likes.count %>
+                       
                     <% end %>
                 <% else %>
                     <%= link_to post_likes_path(id: t.id, post_id: t.id), method: :post do %>
                         <i class="far fa-heart"></i><%= t.likes.count %>
-                        <p>いいね</p><%= t.likes.count %>
+                       
                     <% end %>
                 <% end %>
             <% else %>
                 <i class="far fa-heart"></i><%= t.likes.count %>
                 <p>いいねの数 = </p><%= t.likes.count %>
             <% end %>
-        
-            <%= t.created_at %>
-            <%= link_to "詳細へ", post_path(t.id) %> 
-            <%= link_to "編集する", edit_post_path(t.id) %>
-            <%= button_to "削除する", post_path(t.id), method: :delete %>
+          </div> 
+           
+            
+            
+           
         </div>
-    </div>
-    </div>
+    
+    
   <% end %>
   </div>
 
-<%= link_to "診断機能へ",  perfumes_path %>
+
 
 <div id='map'></div>
 
 <style>
 #map {
   height: 600px;
-  width: 100%;
+  margin : 0 auto;
+  width: 60%;
+  
 }
 </style>
 
