--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,34 @@
 <h1>題名</h1>
 <h3>一覧ページ</h3>
 <div class="post">
+  <%= image_tag @post.image_url, size: "250x200" if @post.image? %>
   <p><%= @post.name %></p>
   <p><%= @post.about %></p>
   <p><%= @post.cafe_name %></p>
   <p><%= @post.address %></p>
   <p><%= @post.created_at %></p>
+  <%= link_to @post.user.name, user_path(@post.user.id) %> 
 
   <% if user_signed_in? %>
       <% if current_user.already_liked?(@post) %>
         <%= link_to post_like_path(@post), method: :delete do %>
             <i class="fas fa-heart"></i><%= @post.likes.count %>
-            <p>いいねを取り消す</p><%= @post.likes.count %>
+            
         <% end %>
       <% else %>
         <%= link_to post_likes_path(@post), method: :post do %>
             <i class="far fa-heart"></i><%= @post.likes.count %>
-            <p>いいね</p><%= @post.likes.count %>
+           
         <% end %>
       <% end %>
     <% else %>
       <i class="far fa-heart"></i><%= @post.likes.count %>
       <p>いいねの数 = </p><%= @post.likes.count %>
     <% end %>
+    <% if user_signed_in? && current_user.id == @post.user_id %>
     <%= link_to "編集する", edit_post_path(@post.id) %>
+    <%= link_to "削除する", post_path(@post.id), method: :delete %>
+    <% end %> 
 
 </div>
 
@@ -52,6 +57,8 @@
     <% end %>
   <% end %>
 </div>
+
+<%= link_to "Tweet一覧に戻る", posts_path %>
 
 <div id='map'></div>
 
@@ -83,4 +90,4 @@ function initMap(){
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwITqnfMO2f64ReD-fc26O3H89FaaiALk&callback=initMap" async defer></script>
 
-<%= link_to "Tweet一覧に戻る", posts_path %>
+
