--- a/app/views/perfumes/show.html.erb
+++ b/app/views/perfumes/show.html.erb
@@ -1,9 +1,15 @@
+<link rel="stylesheet" href"app/assets/stylesheets/perfumes_show.scss">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&family=Yusei+Magic&display=swap" rel="stylesheet">
+
 <div class="intoro">
-<h5>診断結果</h5>
-<p>あなたにおすすめの香りは…</p>
+  <h2>あなたにおすすめのカフェは…</h2>
 </div>
-<div class="post-container">
-<div class="post">
+
+<div class="result">
+  
     <% if @perfume.question == "111" %>
     <h6>Higuma Doughnuts × Cofee Wrights 表参道</h6>
     <p>温かい雰囲気のドーナツ屋さん</p>
@@ -54,7 +60,9 @@
 
     <% end %>
 
-    </div>
+  
+</div>
+
 
 
 
