--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,10 +21,11 @@
   body {
     font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ",
       Meiryo, "ＭＳ Ｐゴシック", sans-serif;
-      background-color: #FFFCF3;
+      background-color: #f9edda; 
+      
   }
   header {
-    background-color:#FFFCF3;
+    background: linear-gradient(to right, #f6e4c9,#f6cd8f );
     height: 80px;
     font-weight: bold;
     display: flex;
@@ -32,18 +33,21 @@
     align-items: center;
   }
   header a {
-    color:black; 
+    color:#241E17;
     text-decoration: none; 
   }
   header h1 {
-    color:black;
+    color:#241E17;
     margin-left: 20px;
     font-family: 'Kaushan Script', cursive;
+    font-size: 50px;
   }
   .header-list {
     display: flex;
     align-items: center;
     font-family: 'Kaushan Script', cursive;
+    font-size: 30px;
+    color:#698da4;
   }
   
   header ul {
@@ -55,9 +59,9 @@
   }
 
   footer {
-    color: white;
+    color: black;
     height: 30px;
-    background-color: #000;
+    background: linear-gradient(to right, #f6e4c9,#f6cd8f );
     bottom: 0;
     width: 100%;
     display: flex;
@@ -66,4 +70,5 @@
     justify-content: flex-end;
   }
 
+  
   
