--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
     <ul>
      <li><%= link_to "new post", new_post_path %></li>
 
-     <li><%= link_to "recommedation",  perfumes_path %></li>
+     <li><%= link_to "recommendation",  perfumes_path %></li>
      
      <% if user_signed_in? %>
      <li><%= link_to "mypage", user_path(current_user.id) %></li>
