--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,34 @@
-<%= form_for @post do |f| %>
-<%= f.label :cafe_name %>
-<%= f.text_field :cafe_name, :size => 30 %>
-<%= f.label :about %>
-<%= f.text_area :about, :size => "30x2" %>
-<%= f.label :address %>
-<%= f.text_field :address, :size => 30 %>
-<%= f.label :name %>
-<%= f.text_field :name, :size => 30 %>
- <%= f.submit "編集する" %>
+<link rel="stylesheet" href"app/assets/stylesheets/show.scss">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&family=Merriweather:ital@1&family=Yusei+Magic&display=swap" rel="stylesheet">
+
+<div class="profile-edit">
+
+  <%= form_for @post do |f| %>
+
+  <div class="edit">    
+    <%= f.label :cafe_name %><br />
+    <%= f.text_field :cafe_name, :size => 30 %>
+  </div>
+  
+  <div class="edit"> 
+    <%= f.label :about %><br />
+    <%= f.text_area :about, :size => "30x2" %>
+  </div>
+  
+  <div class="edit"> 
+    <%= f.label :address %><br />
+    <%= f.text_field :address, :size => 30 %>
+  </div>
+  
+  <div class="edit"> 
+    <%= f.label :name %><br />
+    <%= f.text_field :name, :size => 30 %>
+  </div>
+
+  <%= f.submit "編集" ,  class: "edit-botan" %>
   <% end %>
+
+</div>
