--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,30 @@
-<%= stylesheet_link_tag 'index', :media => "all" %>
+<link rel="stylesheet" href"app/assets/stylesheets/index.scss">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&family=Merriweather:ital@1&family=Yusei+Magic&display=swap" rel="stylesheet">
+
+<div class="icon">
+  <%= image_tag 'simple.png' %>
+  <h2 class="center1">~No Cafe, No Life~</h2>
+  
+  <p class="center2">カフェ巡りをもっと楽しくするカフェ投稿サイト</p>
+  
 
 
-<%= image_tag 'coffee.png', class:'icon' %>
+</div> 
 
-
-<h3>Posts</h3>
+<h3>~Posts~</h3>
 
 <div class="posts-container">
   <% @posts.each do |t| %>     
         <div class="left-container">
           <div class="post-image">
-          <%= link_to  post_path(t.id) do %> <%= image_tag t.image_url, size: "300x300" if t.image? %>  <% end %>  
+          <%= link_to  post_path(t.id) do %> <%= image_tag t.image_url, class:'photo', size: "90%x90%" if t.image?%>  <% end %>  
           </div>                   
             
           <div class="post-about">
-            <%= t.cafe_name %>                        
+          <!-- <%= t.cafe_name %>                     
             <% if user_signed_in? %>
                 <% if current_user.already_liked?(t) %>
                     <%= link_to post_like_path(id: t.id, post_id: t.id), method: :delete do %>
@@ -28,9 +38,9 @@
                     <% end %>
                 <% end %>
             <% else %>
-                <i class="far fa-heart"></i><%= t.likes.count %>
-                <p>いいねの数 = </p><%= t.likes.count %>
-            <% end %>
+            <i class="far fa-heart"></i><%= t.likes.count %> 
+                <p>いいねの数 = </p><%= t.likes.count %> 
+            <% end %> --> 
           </div> 
            
             
@@ -42,15 +52,16 @@
   <% end %>
   </div>
 
+  <h3>~Cafe Map~</h3>
 
 
 <div id='map'></div>
 
 <style>
 #map {
-  height: 600px;
-  margin : 0 auto;
-  width: 60%;
+  height: 500px;
+  margin : 10% auto;
+  width: 50%;
   
 }
 </style>
