--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,51 +1,65 @@
-<h1>(自分の題名)</h1>
-<h3>新規投稿ページ</h3>
-<%= form_for @post do |f| %>
+<link rel="stylesheet" href"app/assets/stylesheets/new.scss">
+
+<div class="new">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&family=Yusei+Magic&display=swap" rel="stylesheet">
+  
+  <div class="right">
+    <%= form_for @post do |f| %>
 
     <div class="field">
-    <%= f.label :cafe_name %>
-    <%= f.text_field :cafe_name, :size => 30 %>
-  </div>
+      <%= f.label :cafe_name %>
+      <%= f.text_field :cafe_name, :size => 50 %>
+    </div>
   
-  <div class="field">
-  <%= f.label :詳細  %>
-  <%= f.text_area :about, :size => "30x2" %>
-</div>
+    <div class="field">
+      <%= f.label :review  %>
+      <%= f.text_area :about, :size => "50x2" %>
+    </div>
 
-<div class="field">
-<%= f.label :住所 %>
-<%= f.text_field :address, :size => 30 %>
-</div>
+    <div class="field">
+      <%= f.label :address %>
+      <%= f.text_field :address, :size => 50 %>
+    </div>
 
-<div class="field">
-<%= f.label :名前 %>
-<%= f.text_field :name, :size => 30 %>
-</div>
+    <div class="field">
+      <%= f.label :your_name %>
+      <%= f.text_field :name, :size => 50 %>
+    </div>
 
-<div class="field">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-</div>
-
-      <%= f.label :lat,"緯度" %>
+    <div class="field">
+      <%= f.label :image %>
+      <%= f.file_field :image %>
+    </div>
+    
+    <div class="field">
+      <%= f.label :lat,"latitude" %>
       <%= f.text_field :lat,:value =>"緯度", id: :lat %>
-      <%= f.label :lng,"経度" %>
+      <%= f.label :lng,"longitude" %>
       <%= f.text_field :lng,:value =>"経度", id: :lng %>
-      <%= f.submit %>
-
-
+      
+    </div>
+    
+    <%= f.submit "post" , class: "toukou-botan" %>
+    
+    
+    <%= link_to "トップに戻る", posts_path , class: "modoru-botan" %>
+</div> 
   
+<div class="left">
   <h2>Map</h2>
   
-  <input id="address" type="textbox" value="GeekSalon">
-  <input type="button" value="検索" onclick="codeAddress()">
-  <p>マーカーをドラック＆ドロップで位置の調整ができます。<p>
-  <div id='map'></div>
+   
+   <div id='map'></div>
   
   <style>
   #map {
-    height: 600px;
-    width: 600px;
+    width: 100%;
+    height: 100%;
+    margin-top: 5%;
+    
   }
   </style>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwITqnfMO2f64ReD-fc26O3H89FaaiALk&callback=initMap" async defer></script>
@@ -104,8 +118,15 @@
   }
   
   </script>
-  
 
-<% end %>
+  <input id="address" type="textbox" value="GeekSalon">
+  <input type="button" value="検索" onclick="codeAddress()">
 
-<%= link_to "一覧に戻る", posts_path %>
+  <% end %>
+</div>
+
+
+
+</div>
+
+
