--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,38 +1,35 @@
-<h1>Rooms#show</h1>
-<p>Find me in app/views/rooms/show.html.erb</p>
-<div class="user-in">
+<link rel="stylesheet" href"app/assets/stylesheets/rooms.scss">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&family=Yusei+Magic&display=swap" rel="stylesheet">
+
+<div class="user">
 <% @entries.each do |e| %>
-    <h3><strong><a href="/users/<%= e.user.id %>"><%= e.user.email%></a></strong></h3>
+    <p><strong><a href="/users/<%= e.user.id %>"><%= e.user.email%></a></strong></p>
 <% end %>
-<p>2人のDM❤️</p>
+<p>2人のDM</p>
 </div>
 
-<div class="dmMain">
+<div class="dm">
+  <div class="message">
     <% @messages.each do |m| %>
         <strong><%= m.body %></strong>
-        <small><%= m.user.email %>さん</small><hr>
+        <small><%= m.user.email %></small><hr>
     <% end %>
+  </div>
 
     <%= form_for @message do |f| %>
-    <%= f.text_field :body, :placeholder => "メッセージを入力して下さい" , :size => 100 %>
+  <div class="text-field">    
+    <%= f.text_field :body, :placeholder => "メッセージを入力して下さい" , :size => 50 %>
+  </div>  
     <%= f.hidden_field :room_id, :value => @room.id %>
     <br>
-    <%= f.submit "送信する" %>
+    <%= f.submit "送信" , class: "dm-botan"  %>
     <% end %>
 </div>
 
-<%= link_to "ユーザー一覧に戻る", users_path %>
+
+  <%= link_to "トップに戻る", posts_path , class: "back" %>
 
 
-<style>
-.user-in{
-    text-align:center;
-    border:1px solid darkgray;
-    background-color:gainsboro;
-}
-.dmMain{
-    padding:30px;
-    border:1px solid darkgray;
-    background-color:gainsboro;
-}
-</style>
