--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,14 @@
-<h1>users#show</h1>
+<link rel="stylesheet" href"app/assets/stylesheets/users.scss">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merienda&family=Yusei+Magic&display=swap" rel="stylesheet">
+
+
+<div class="mypage">
+
+<div class="mypage1">
+
 <p>名前 : <%= @user.name %></p>
 <p>メールアドレス : <%= @user.email %></p>
 <p>プロフィール : <%= @user.profile %></p>
@@ -6,9 +16,7 @@
 <% if current_user.id == @user.id %>
   <%= link_to "編集する", edit_user_registration_path %>
 <% end %>
-
-<div class="user-in">
-<h2><%= @user.email %></h2>
+<p><%= @user.email %></p>
 
 <% if @user.id == current_user.id %>
     <%= @msg %>
@@ -24,21 +32,30 @@
         <% end %>
     <% end %>
 <% end %>
-</div>
+
 
 
 <h2>ユーザーの投稿一覧</h2>
 <% @user.posts.each do |t| %>
-  <%= t.user.name %>
+  <%= link_to  post_path(t.id) do %> <%= image_tag t.image_url, class:'photo1', size: "20%x20%" if t.image?%>  <% end %>  
 <% end %>
 
+</div>
+
+<div class="mypage2">
 
 <h2>ユーザーがいいねした投稿一覧</h2>
 <% @user.liked_posts.each do |t| %>
   <%= t.user.name %>
+  <%= link_to  post_path(t.id) do %> <%= image_tag t.image_url, class:'photo2', size: "30%x30%" if t.image?%>  <% end %>  
 <% end %>
 <!-- ここまで-->
 
-<%= link_to "Tweet一覧に戻る", posts_path %>
-
 <%= image_tag @user.image_url, size: "250x200" if @user.image? %>
+</div>
+
+</div>
+
+<div class="mypage3">
+<%= link_to "トップに戻る", posts_path , class: "user-modoru" %>
+</div>
